src/plugins/platforms/android/androidjnimain.cpp
@@ -105,7 +105,6 @@ static sem_t m_exitSemaphore, m_terminateSemaphore;
 QHash<int, AndroidSurfaceClient *> m_surfaces;
 
 static QBasicMutex m_surfacesMutex;
-static int m_surfaceId = 1;
 
 
 static QAndroidPlatformIntegration *m_androidPlatformIntegration = nullptr;
@@ -325,6 +324,11 @@ namespace QtAndroid
         return manufacturer + QLatin1Char(' ') + model;
     }
 
+    jint generateViewId()
+    {
+        return QJniObject::callStaticMethod<jint>("android/view/View", "generateViewId", "()I");
+    }
+
     int createSurface(AndroidSurfaceClient *client, const QRect &geometry, bool onTop, int imageDepth)
     {
         QJniEnvironment env;
@@ -332,7 +336,7 @@ namespace QtAndroid
             return -1;
 
         m_surfacesMutex.lock();
-        int surfaceId = m_surfaceId++;
+        jint surfaceId = generateViewId();
         m_surfaces[surfaceId] = client;
         m_surfacesMutex.unlock();
 
@@ -355,7 +359,7 @@ namespace QtAndroid
     int insertNativeView(jobject view, const QRect &geometry)
     {
         m_surfacesMutex.lock();
-        const int surfaceId = m_surfaceId++;
+        jint surfaceId = generateViewId();
         m_surfaces[surfaceId] = nullptr; // dummy
         m_surfacesMutex.unlock();
 
